Expose more folders to allow the routes to show
I’m not sure if this is really the solution, but it seems to have fixed
the problem that even though the routes file was updated, the routes
themselves weren’t appearing when polled.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,10 @@ services:
       - 3000:3000
     environment:
       - DOCKERIZED=true
+      - RAILS_ENV=development
     volumes:
+      - /archivist-api/tmp
+      - /tmp
       - ../archivist-api:/archivist-api
 
   web:
