Put containers on private network + setup public haproxy (#2)
* Add skeleton for haproxy docker container with STDOUT logging

* Setup interal/external networks with the public api behind haproxy

* Improve readability of the networks for the containers

* Mongo isn't exposed on the public network, so it doesn't need a port

* The web doesn't need the api in order to start

* Split haproxy configs into public/private

* I just gave ya some real simple rate limitin'! Yee haw!

* Don't build haproxy+libssl from source

* ssl cert added

* Cleaned up private haproxy config

* Got the simple version of rate limiting working.

* Update haproxy.cfg

Committing to get changes off my phone. Untested.

* Added some slightly more complex rate limiting.

* Implemented the specific ratelimiting as directed by Charles.

* Fixed some potential scoping errors.

* Attempt to give different codes for different modes of failure.

* Script for testing if rate limiting is working

* Cleaned up rate limiting config

* Cleaned up certs

* Remove comments

* Ensure we can access the private servers

* Prevent the api from getting flooded with documents

* Fix config location

* Add ssl to the public endpoint

* Debug provides enough logs

* The HAProxies depend on the apis

* Only rate limit the document creation endpoint

* Unused if

* Reduce container usage for now.

* Depends on normal api, now that public api container has been disabled

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,10 +3,9 @@ version: '2'
 services:
   mongodb:
     image: mongo:3.2
-    # TODO: mongod --smallfiles?
     command: mongod
-    ports:
-      - 27017:27017
+    networks:
+      internal: {ipv4_address: 172.16.1.5}
     volumes:
       - ../archivist-api/db/mongo:/data
 
@@ -14,8 +13,8 @@ services:
     depends_on:
       - mongodb
     build: ../archivist-api/
-    ports:
-      - 3000:3000
+    networks:
+      internal: {ipv4_address: 172.16.1.9}
     environment:
       - DOCKERIZED=true
       - RAILS_ENV=development
@@ -24,12 +23,40 @@ services:
       - /tmp
       - ../archivist-api:/archivist-api
 
-  web:
+  pub_haproxy:
     depends_on:
       - api
+    build: ./haproxy/
+    volumes:
+      - ./haproxy/config-public:/haproxy-data
+    ports:
+      - 4000:80
+    networks:
+      external: {ipv4_address: 172.16.0.12}
+      internal: {ipv4_address: 172.16.1.12}
+
+  web:
     build: ../archivist-web/
     ports:
       - 8080:8080
+    networks:
+      external: {ipv4_address: 172.16.0.25}
+      internal: {ipv4_address: 172.16.1.25}
     volumes:
-      - ../archivist-web:/archivist-web
       - /archivist-web/node_modules
+      - ../archivist-web:/archivist-web
+
+networks:
+  external:
+    driver: bridge
+    ipam:
+      driver: default
+      config:
+        - subnet: 172.16.0.0/24
+  internal:
+    driver: bridge
+    internal: true
+    ipam:
+      driver: default
+      config:
+        - subnet: 172.16.1.0/24
